fix: text-overflow ellipsis sur le texte des cartes de commande

--- a/style/mobile.scss
+++ b/style/mobile.scss
@@ -253,7 +253,6 @@ body {
         position: absolute;
         margin-left: -41px;
         background-image: linear-gradient(to bottom, #9356DC, #FF79DA);
-        -webkit-background-clip: text;
                 background-clip: text;
         color: transparent;
         transition-duration: 0.4s;
@@ -544,7 +543,6 @@ i.fa-solid.fa-circle-check {
         position: absolute;
         margin-left: -24px;
         background-image: linear-gradient(to bottom, #9356DC, #FF79DA);
-        -webkit-background-clip: text;
                 background-clip: text;
         color: transparent;
         transition-duration: 0.4s;
